--- a/src/assets/style/partials/_navbar.sass
+++ b/src/assets/style/partials/_navbar.sass
@@ -47,7 +47,7 @@
       border-top: 1px solid $tertiary
 
   .mobile-nav-img
-    width: 80vw
+    width: 50vw
     margin: $gutterWidth auto
 
 .show-mobile-nav
